Sounds integrated to bathroom scene

--- a/HP Labs Main Twine and JS Projects/main.html
+++ b/HP Labs Main Twine and JS Projects/main.html
@@ -11,7 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="HiddenPassagesStudio" startnode="1" creator="Twine" creator-version="2.3.5" ifid="1FDC9DA6-B756-41BD-A0D8-258F3FDFB363" zoom="0.6" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css?family=Rajdhani|Scheherazade|Special+Elite|Alegreya+Sans+SC|Josefin+Sans|DM+Mono:wght@300';
+<tw-storydata name="HiddenPassagesStudio" startnode="1" creator="Twine" creator-version="2.3.5" ifid="1FDC9DA6-B756-41BD-A0D8-258F3FDFB363" zoom="0.6" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css?family=Rajdhani|Scheherazade|Special+Elite|Alegreya+Sans+SC|Josefin+Sans:wght@300';
 
 html.oldOffice, body.oldOffice, tw-story[tags~="oldOffice"] {
   font-family: 'Special Elite', serif;
@@ -20,7 +20,7 @@ html.oldOffice {
 	background-color: #efef00;
 }
 tw-story[tags~="oldOffice"] {
-  background-image: url('https://gamkedo.com/new-home-img/subtle/ricepaper2.png');
+  background-image: url('http://hometeamgamedev.com/hp2/past.png');
   font-size: 16px;
 }
 
@@ -32,10 +32,10 @@ html.futureTower {
   	color: #111111;
 }
 tw-story[tags~="futureTower"] {
-  background-image: url('https://gamkedo.com/new-home-img/subtle/brushed_alu.png');
+  background-image: url('http://hometeamgamedev.com/hp2/future.png');
   font-size: 15px;
 }
-
+/*
 html.underWater, body.underWater, tw-story[tags~="underWater"] {
   font-family: 'DM Mono', monospace;
 }
@@ -45,7 +45,7 @@ html.underWater {
 tw-story[tags~="underWater"] {
   background-image: url('https://gamkedo.com/new-home-img/subtle/beige_paper.png');
   font-size: 16px;
-}
+}*/
 
 tw-story {
 	background: white;
@@ -56,7 +56,7 @@ tw-story {
   color: #888;
   font-size: 24px;
 	line-height: 1.25em;
-   background-image: url('https://gamkedo.com/new-home-img/subtle/white_wall_hash.png'); /* workable */
+   background-image: url('http://hometeamgamedev.com/hp2/present.png');
 }
 
 img.right-side {
@@ -358,7 +358,7 @@ muteShow.innerHTML = "shows mute state here"
 document.body.appendChild(muteShow);
 muteShow.addEventListener("click", toggleMuteVO);
 function updateMuteIndicator() {
-	muteShow.innerHTML = (speakerThing.sayWords ? "🔊" : "🔇")+" (M key)";
+	muteShow.innerHTML = (speakerThing.sayWords ? "🔊" : "🔇")+" (V key)";
 }
 updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGame" color="red"></tw-tag>,<tw-tag name="VO" color="green"></tw-tag>,<tw-tag name="futureTower" color="yellow"></tw-tag>,<tw-tag name="oldOffice" color="purple"></tw-tag>,<tw-tag name="underWater" color="blue"></tw-tag>,<tw-tag name="wrongVO" color="yellow"></tw-tag><tw-passagedata pid="1" name="Here is where it starts" tags="wrongVO" position="1266.6666666666667,378.3333333333333" size="100,100">&lt;center&gt;
 &lt;h3&gt;&lt;font color=&quot;orange&quot;&gt;Hidden Passages 2:&lt;br/&gt;R&amp;D Labs&lt;/font&gt;&lt;/h3&gt;
@@ -366,8 +366,6 @@ updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGa
 [[Explore in search of Hidden Passages-&gt;playerPath1-amnesia]]
 
 [[Credits and Scene Select-&gt;gameCredits]]
-
-press V to toggle voiceover
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Choose to either Play or view Credits.&#39;)&quot;&gt;
 
@@ -468,18 +466,18 @@ Vending machines are behind you. On the counter a box with a key drawn on it is 
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re in an open kitchen at the center of the office. Vending machines are behind you. On the counter a box with a key drawn on it is making noise.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="10" name="futureElevator" tags="VO" position="1733,260" size="100,100">You hear clicks of a ratcheting gear, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.
 
-[[Step inside the elevator-&gt;futureTower]]
+[[step inside the elevator-&gt;futureTower]]
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You hear clicks of a ratcheting gear, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="11" name="futureTower" tags="futureTower VO" position="1858.6666666666667,272.6666666666667" size="100,100">After a strangely long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.
 
-(link: &quot;Walk up to get a closer look at the window&quot;)[(goto-url: &#39;unity_loader.html?phrase=Return_to_the_elevator&amp;file=FutureView&#39;)]
+(link: &quot;walk up to get a closer look at the window&quot;)[(goto-url: &#39;unity_loader.html?phrase=Return_to_the_elevator&amp;file=FutureView&#39;)]
 
-(link: &quot;Open the packet that has an eyeball picture on it&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]
+(link: &quot;open the packet that has an eyeball picture on it&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]
 
-(link: &quot;Try on the red VR headset nearby&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)]
-(link: &quot;Try on the blue VR headset nearby&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]
+(link: &quot;try on the red VR glasses nearby&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)]
+(link: &quot;try on the blue VR glasses nearby&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]
 
-(link: &quot;A poster shows a tongue and an arrow - lick it?&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
+(link: &quot;lick the delicious looking poster&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;After a strangely long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="12" name="playerPath2-teleporter" tags="" position="572,1079" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
 
@@ -606,9 +604,9 @@ Want to use it?
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="28" name="oldOfficeMain" tags="oldOffice VO" position="2099.6666666666665,820.6666666666667" size="100,100">The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the build is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what&#39;s here is also more spacious. Apparently there used to be 3 private offices, where you last saw a dozen cubicles packed together.
 
-[[Enter the private office on the left-&gt;oldOfficeL]]
-[[Enter the private office in the middle-&gt;oldOfficeM]]
-[[Enter the private office on the right-&gt;oldOfficeR]]
+[[enter the private office on the left-&gt;oldOfficeL]]
+[[enter the private office in the middle-&gt;oldOfficeM]]
+[[enter the private office on the right-&gt;oldOfficeR]]
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the build is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what\&#39;s here is also more spacious. Apparently there used to be 3 private offices, where you last saw a dozen cubicles packed together.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="29" name="oldOfficeL" tags="oldOffice VO" position="1951.3333333333333,817.3333333333333" size="100,100">This must has been the boss&#39;s office. This setup looks serious. I wonder what it can do?
 
@@ -649,8 +647,7 @@ Justin Chin: (link: &quot;Angel Bot&quot;)[(goto-url: &#39;twine_frame.html?phra
 Special thanks to (link: &quot;Ryan Malm&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)], (link: &quot;Brian J. Boucher&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)], and Graham Brown
 
 This project was made by members of (link-repeat: &quot;HomeTeamGameDev.com
-Apply to make games with us!&quot;)[(open-url: &#39;https://HomeTeamGameDev.com&#39;)]
-</tw-passagedata></tw-storydata>
+Apply to make games with us!&quot;)[(open-url: &#39;https://HomeTeamGameDev.com&#39;)]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
