Making the initial clue clearer, fixing some minor typos in Twine text

--- a/HP Labs Main Twine and JS Projects/main.html
+++ b/HP Labs Main Twine and JS Projects/main.html
@@ -363,9 +363,9 @@ function updateMuteIndicator() {
 updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGame" color="red"></tw-tag>,<tw-tag name="VO" color="green"></tw-tag>,<tw-tag name="futureTower" color="yellow"></tw-tag>,<tw-tag name="oldOffice" color="purple"></tw-tag>,<tw-tag name="underWater" color="blue"></tw-tag>,<tw-tag name="wrongVO" color="yellow"></tw-tag><tw-passagedata pid="1" name="Here is where it starts" tags="wrongVO" position="1266.6666666666667,378.3333333333333" size="100,100">&lt;center&gt;
 &lt;h3&gt;&lt;font color=&quot;orange&quot;&gt;Hidden Passages 2:&lt;br/&gt;R&amp;D Labs&lt;/font&gt;&lt;/h3&gt;
 
-[[Explore in search of Hidden Passages-&gt;playerPath1-amnesia]]
+[[Start-&gt;playerPath1-amnesia]]
 
-[[Credits and Scene Select-&gt;gameCredits]]
+[[Credits-&gt;gameCredits]]
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Choose to either Play or view Credits.&#39;)&quot;&gt;
 
@@ -412,7 +412,7 @@ You&#39;ll be exploring an abandoned game studio through text such as this, but 
 
 You can backtrack by using the 👈 button.
 
-[[Explore the office-&gt;officeStart]]
+[[explore the office-&gt;officeStart]]
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Press the V key at any time to turn on or off automated Voiceover. This is a game that contains many different kinds of games. You\&#39;ll be exploring an abandoned game studio through text such as this, but the games you discover are a mix of 2D, 3D, and also text-based. You can backtrack by using the finger pointing left button.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="writing experiments" tags="" position="229,1172" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
 
@@ -454,17 +454,17 @@ You appear to be alone. You&#39;re no more craving other people than food, not a
 
 Do you step forward on the path, or take a moment to rest and breath it in?</tw-passagedata><tw-passagedata pid="9" name="officeStart" tags="VO" position="1751,540" size="100,100">You&#39;re in an open kitchen at the center of the office.
 
-Vending machines are behind you. On the counter a box with a key drawn on it is making noise.
-
-[[turn to the vending machines-&gt;vendingMachines]]
-
-[[use the door on your left, labeled Toy Room-&gt;officeNToyRoom]]
-
-[[go right, towards the cubicles-&gt;cubicles]]
+Vending machines are behind you. A box with a key drawn on it is on the counter in front of you, making noise.
 
 (link: &quot;pick up the ticking box&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_box&amp;file=kornel_kornel-index~&#39;)]
 
-&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re in an open kitchen at the center of the office. Vending machines are behind you. On the counter a box with a key drawn on it is making noise.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="10" name="futureElevator" tags="VO" position="1733,260" size="100,100">You hear clicks of a ratcheting gear, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.
+[[turn to the vending machines-&gt;vendingMachines]]
+
+[[enter the door labeled &quot;Toy Room&quot;-&gt;officeNToyRoom]]
+
+[[head towards the cubicles-&gt;cubicles]]
+
+&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re in an open kitchen at the center of the office. Vending machines are behind you. A box with a key drawn on it is on the counter in front of you, making noise&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="10" name="futureElevator" tags="VO" position="1733,260" size="100,100">You hear clicks of a ratcheting gear, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.
 
 [[step inside the elevator-&gt;futureTower]]
 
@@ -475,9 +475,9 @@ Vending machines are behind you. On the counter a box with a key drawn on it is 
 (link: &quot;open the packet that has an eyeball picture on it&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]
 
 (link: &quot;try on the red VR glasses nearby&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)]
-(link: &quot;try on the blue VR glasses nearby&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]
+(link: &quot;try on the blue VR glasses nearby&quot;)[(goto-url: &#39;unity_loader.html?phrase=Shout&amp;file=Oneil&amp;param=1&#39;)]
 
-(link: &quot;lick the delicious looking poster&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
+(link: &quot;lick the delicious looking poster&quot;)[(goto-url: &#39;unity_loader.html?phrase=Shake_to_wake_up&amp;file=Infinite_Cube_Swarm&#39;)]
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;After a strangely long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="12" name="playerPath2-teleporter" tags="" position="572,1079" size="100,100">A loud hum fills your ears. It would hurt if it went on longer, but it&#39;s just long enough to tense up reflexively, as if you could somehow dodge it.
 
@@ -553,9 +553,9 @@ You&#39;re on the other side of a door, inexplicably finding yoruself in an offi
 
 [[alien clone-&gt;playerPath5-alienClone]]
 
-[[street office letter-&gt;playerPath6-officeLetter]]</tw-passagedata><tw-passagedata pid="19" name="officeNToyRoom" tags="VO" position="1943,579" size="100,100">You see building blocks, army figures, a giant boomerang, glowing green ant farms, toy cars set up as if they&#39;re facing off, and several other things to play with.
+[[street office letter-&gt;playerPath6-officeLetter]]</tw-passagedata><tw-passagedata pid="19" name="officeNToyRoom" tags="VO" position="1943,579" size="100,100">You see building blocks, army figures, a giant boomerang, glowing green ant farms, toy cars, and several other things to play with.
 
-(link: &quot;inspect the snow globe&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)]
+(link: &quot;inspect the snow globe&quot;)[(goto-url: &#39;unity_loader.html?phrase=Put_this_toy_down&amp;file=TurnTableCar&#39;)]
 
 (link: &quot;look at the toy clock&quot;)[(goto-url: &#39;unity_loader.html?phrase=Look_away&amp;file=ClockSpin&amp;param=1&#39;)]
 
@@ -570,7 +570,7 @@ You&#39;re on the other side of a door, inexplicably finding yoruself in an offi
 
 [[check out the time machine-&gt;timeMachine]]
 
-&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You see building blocks, army figures, a giant boomerang, glowing green ant farms, toy cars set up as if they\&#39;re facing off, and several other things to play with.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="20" name="vendingMachines" tags="VO" position="1721,390" size="100,100">One dispenses soda. The other has junk food.
+&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You see building blocks, army figures, a giant boomerang, glowing green ant farms, toy cars, and several other things to play with.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="20" name="vendingMachines" tags="VO" position="1721,390" size="100,100">One dispenses soda. The other has junk food.
 
 You don&#39;t have your wallet.
 
@@ -580,7 +580,7 @@ A blue on black LCD display above the bill slot reads, &quot;CANCEL?&quot;
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;One dispenses soda. The other has junk food. You don\&#39;t have your wallet. A blue on black LCD display above the bill slot reads, CANCEL?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="21" name="cubicles" tags="VO" position="1507.6666666666667,693" size="100,100">You see a bathroom entrance, messy cubicle, and copy machine.
 
-(link: &quot;enter the bathroom&quot;)[(goto-url: &#39;unity_loader.html?phrase=Exit_bathroom&amp;file=Bathroom&#39;)]
+(link: &quot;investigate the bathroom&quot;)[(goto-url: &#39;unity_loader.html?phrase=Get_out_of_here&amp;file=Bathroom&#39;)]
 
 (link: &quot;explore the intern&#39;s cubicle&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_cubicle-of-an-intern~&#39;)]
 
