--- a/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
+++ b/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
@@ -126,7 +126,8 @@ What now?
 
 The display stopped changing, stuck on: (colour: &quot;#e61919&quot;)[**$seconds**].
 
-Once all the cables are cut you notice a note inside the box: OCEANSIDE Ch 4 Part 49 Word 3
+With all the cables cut you now see a hastily scribbled note inside the box:
+&quot;OCEANSIDE&quot; IS THE KEY - 4.49:3 - CHAPTER 4 PART 49 WORD 3
 
 The voice in the headphone starts talking again. But you aren&#39;t paying attention to it any longer.
 
