Minor Twine fixes

--- a/HP Labs Main Twine and JS Projects/main.html
+++ b/HP Labs Main Twine and JS Projects/main.html
@@ -367,7 +367,7 @@ updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGa
 
 [[Credits-&gt;gameCredits]]
 
-&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Choose to either Play or view Credits.&#39;)&quot;&gt;
+&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Choose to Start or view Credits.&#39;)&quot;&gt;
 
 &lt;/center&gt;</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="wrongVO" position="859.3333333333334,496" size="100,100">&lt;h3&gt;1980s&lt;/h3&gt;
 (link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
@@ -464,11 +464,11 @@ Vending machines are behind you. A box with a key drawn on it is on the counter 
 
 [[head towards the cubicles-&gt;cubicles]]
 
-&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re in an open kitchen at the center of the office. Vending machines are behind you. A box with a key drawn on it is on the counter in front of you, making noise&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="10" name="futureElevator" tags="VO" position="1733,260" size="100,100">You hear clicks of a ratcheting gear, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.
+&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re in an open kitchen at the center of the office. Vending machines are behind you. A box with a key drawn on it is on the counter in front of you, making noise&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="10" name="futureElevator" tags="VO" position="1733,260" size="100,100">You hear clicks of a ratcheting gear, swaying chains, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.
 
 [[step inside the elevator-&gt;futureTower]]
 
-&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You hear clicks of a ratcheting gear, swaying chain links, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="11" name="futureTower" tags="futureTower VO" position="1858.6666666666667,272.6666666666667" size="100,100">After a strangely long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.
+&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You hear clicks of a ratcheting gear, swaying chains, and low pitch rumble of steel on tile as the soda machine slides aside, revealing a cramped, steel elevator.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="11" name="futureTower" tags="futureTower VO" position="1858.6666666666667,272.6666666666667" size="100,100">After a strangely long elevator ride, the door dings, opening to a floor-to-ceiling view of skyscrapers and neon lights in all directions.
 
 (link: &quot;walk up to get a closer look at the window&quot;)[(goto-url: &#39;unity_loader.html?phrase=Return_to_the_elevator&amp;file=FutureView&#39;)]
 
@@ -576,7 +576,7 @@ You don&#39;t have your wallet.
 
 A blue on black LCD display above the bill slot reads, &quot;CANCEL?&quot;
 
-[[mess with the coin return-&gt;futureElevator]]
+[[press CANCEL on the pad-&gt;futureElevator]]
 
 &lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;One dispenses soda. The other has junk food. You don\&#39;t have your wallet. A blue on black LCD display above the bill slot reads, CANCEL?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="21" name="cubicles" tags="VO" position="1507.6666666666667,693" size="100,100">You see a bathroom entrance, messy cubicle, and copy machine.
 
@@ -620,31 +620,29 @@ Want to use it?
 
 (link: &quot;try out this new computer&#39;s one pre-installed game&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
 
-&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Wow! This computer has a hard drive! Amazing!&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="32" name="gameCredits" tags="" position="1135,472.6666666666667" size="100,100">Chris DeLeon: Project lead, core gameplay, main areas, (link: &quot;Space Shot Sam&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)], (link: &quot;Tumult future eye art&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)], (link: &quot;future tower password entry area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Take_the_elevator_back_down&amp;file=FutureView&#39;)], custom Unity webGL sceneloader and Twine linking
+&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Wow! This computer has a hard drive! Amazing!&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="32" name="gameCredits" tags="" position="1135,472.6666666666667" size="100,100">Chris DeLeon: Project lead, core gameplay, main areas, (link: &quot;Space Shot Sam&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)], (link: &quot;Tumult future eye art&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)], (link: &quot;future tower password entry area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Take_the_elevator_back_down&amp;file=FutureView&#39;)], custom Unity webGL sceneloader and Twine linking, wrote (link: &quot;Self-Calm key text&quot;)[(goto-url: &#39;http://self-calm.com&#39;)]
 
-Muhammed &quot;EyeForcz&quot; Durmusoglu: Models ((link: &quot;clock&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)], (link: &quot;train&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)], (link: &quot;crystal table&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)], (link: &quot;mountain snow globe cars&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)], (link: &quot;bathroom models and related sound effects&quot;)[(goto-url: &#39;unity_loader.html?phrase=Exit_bathroom&amp;file=Bathroom&#39;)], (link: &quot;oneil&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)] (link: &quot;tubes&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]), (link: &quot;sheep sim&quot;)[(goto-url: &#39;eyeforcz/sheep.html&#39;)], post-its
+Muhammed &quot;EyeForcz&quot; Durmusoglu: Models ((link: &quot;clock&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)], (link: &quot;train&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)], (link: &quot;crystal table&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)], (link: &quot;mountain snow globe cars&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)], (link: &quot;bathroom models and related sound effects&quot;)[(goto-url: &#39;unity_loader.html?phrase=Exit_bathroom&amp;file=Bathroom&#39;)], (link: &quot;oneil&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)] (link: &quot;tubes&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]), (link: &quot;sheep sim&quot;)[(goto-url: &#39;eyeforcz/sheep.html&#39;)], post-it art (unused)
 
-Klaim (A. Joël Lamotte): (link: &quot;Infinite cubes&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
-
-Christer &quot;McFunkypants&quot; Kaitila: (link: &quot;BBS hacker&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
+Klaim (A. Joël Lamotte): (link: &quot;Infinite cubes&quot;)[(goto-url: &#39;unity_loader.html?phrase=Back&amp;file=Infinite_Cube_Swarm&#39;)]
 
 Michael &quot;Misha&quot; Fewkes: (link: &quot;Drum machine&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)], (link: &quot;trombone machine&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)], (link: &quot;flute machine&quot;)[(goto-url: &#39;mdfewkes/Fl.html&#39;)], and (link: &quot;trumpet machine&quot;)[(goto-url: &#39;mdfewkes/Tp.html&#39;)]
 
-Lexi &quot;LexiGameDev&quot; Kunkel: (link: &quot;Intern cubicle story&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_cubicle-of-an-intern~&#39;)]
+Lexi &quot;LexiGameDev&quot; Kunkel: (link: &quot;Intern cubicle story&quot;)[(goto-url: &#39;twine_frame.html?phrase=Back&amp;file=LexiGameDev_cubicle-of-an-intern~&#39;)]
 
-Kornel: (link: &quot;Ticking bomb box story&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_box&amp;file=kornel_kornel-index~&#39;)]
-
-H Trayford: (link: &quot;Ozymandias area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Abandon_statue&amp;file=HOne&#39;)]
-
-Ashleigh M.: (link: &quot;Library environment&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_library&amp;file=ashleigh_library~&#39;)]
+Kornel: (link: &quot;Ticking bomb box story&quot;)[(goto-url: &#39;twine_frame.html?phrase=Back&amp;file=kornel_kornel-index~&#39;)]
 
 Catherine San Luis: (link: &quot;Rotation puzzle&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
 
-Alan Zaring: (link: &quot;Snowglobe music&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)]
+Christer &quot;McFunkypants&quot; Kaitila: (link: &quot;BBS hacker&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 
-Justin Chin: (link: &quot;Angel Bot&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_bot&amp;file=jchingamesexperiments_angelbot~&#39;)]
+Ashleigh M.: (link: &quot;Library environment&quot;)[(goto-url: &#39;twine_frame.html?phrase=Back&amp;file=ashleigh_library~&#39;)]
 
-Special thanks to (link: &quot;Ryan Malm&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)], (link: &quot;Brian J. Boucher&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)], and Graham Brown
+H Trayford: (link: &quot;Ozymandias area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Back&amp;file=HOne&#39;)]
+
+Alan Zaring: (link: &quot;Snowglobe music&quot;)[(goto-url: &#39;unity_loader.html?phrase=Back&amp;file=TurnTableCar&#39;)]
+
+Justin Chin: (link: &quot;Angelbot&quot;)[(goto-url: &#39;twine_frame.html?phrase=Back&amp;file=jchingamesexperiments_angelbot~&#39;)]
 
 This project was made by members of (link-repeat: &quot;HomeTeamGameDev.com
 Apply to make games with us!&quot;)[(open-url: &#39;https://HomeTeamGameDev.com&#39;)]</tw-passagedata></tw-storydata>
