Stylized embed frame for unity and twine loaders

--- a/HP Labs Main Twine and JS Projects/main.html
+++ b/HP Labs Main Twine and JS Projects/main.html
@@ -366,7 +366,7 @@ updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGa
 
 &lt;/center&gt;</tw-passagedata><tw-passagedata pid="2" name="playerPath1-amnesia" tags="VO" position="1463.3333333333333,381" size="100,100">Press the V key at any time to turn on or off automated Voiceover.
 
-This is a game that contains many different kinds of games.
+This game contains many other kinds of games, sort of like a digital museum. It&#39;s also a deep rabbit hole leading to secrets outside of it, including puzzle rewards that are real.
 
 You&#39;ll be exploring an abandoned game studio through text such as this, but the games you discover are a mix of 2D, 3D, and also text-based.
 
@@ -374,7 +374,7 @@ You can backtrack by using the 👈 button.
 
 [[explore the office-&gt;officeStart]]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Press the V key at any time to turn on or off automated Voiceover. This is a game that contains many different kinds of games. You\&#39;ll be exploring an abandoned game studio through text such as this, but the games you discover are a mix of 2D, 3D, and also text-based. You can backtrack by using the finger pointing left button.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="3" name="officeStart" tags="VO" position="1751,540" size="100,100">You&#39;re in an open kitchen at the center of the office.
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;Press the V key at any time to turn on or off automated Voiceover. This game contains many other kinds of games, sort of like a digital museum. It\&#39;s also a deep rabbit hole leading to secrets outside of it, including puzzle rewards that are real. You\&#39;ll be exploring an abandoned game studio through text such as this, but the games you discover are a mix of 2D, 3D, and also text-based. You can backtrack by using the finger pointing left button.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="3" name="officeStart" tags="VO" position="1751,540" size="100,100">You&#39;re in an open kitchen at the center of the office.
 
 Vending machines are behind you. A box with a key drawn on it is on the counter in front of you, making noise.
 
@@ -450,13 +450,13 @@ Want to use it?
 
 (link: &quot;Take the time machine farther back, to 1818&quot;)[(goto-url: &#39;unity_loader.html?phrase=Return_in_the_time_machine&amp;file=HOne&#39;)]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="15" name="oldOfficeMain" tags="oldOffice VO" position="2099.6666666666665,820.6666666666667" size="100,100">The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the build is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what&#39;s here is also more spacious. Apparently there used to be 3 private offices, where you last saw a dozen cubicles packed together.
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;You\&#39;re standing in a dark room filled with stacked plastic chairs, wide brooms, an unplugged vending machine, and racks of various cleaning supplies, bins of wires--apparently the toy room used to be used for assorted storage?&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="15" name="oldOfficeMain" tags="oldOffice VO" position="2099.6666666666665,820.6666666666667" size="100,100">The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the building is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what&#39;s here is also more spacious.
 
 [[enter the private office on the left-&gt;oldOfficeL]]
 [[enter the private office in the middle-&gt;oldOfficeM]]
 [[enter the private office on the right-&gt;oldOfficeR]]
 
-&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the build is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what\&#39;s here is also more spacious. Apparently there used to be 3 private offices, where you last saw a dozen cubicles packed together.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="oldOfficeL" tags="oldOffice VO" position="1951.3333333333333,817.3333333333333" size="100,100">This must has been the boss&#39;s office. This setup looks serious. I wonder what it can do?
+&lt;img src=&quot;empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;The office reeks of cigarettes and burnt coffee. Bright sunlight beams through wooden slats. You can immediately tell that the building is... smaller? It seems to have undergone a lot of expansion in the past few decades, but what\&#39;s here is also more spacious.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="16" name="oldOfficeL" tags="oldOffice VO" position="1951.3333333333333,817.3333333333333" size="100,100">This must has been the boss&#39;s office. This setup looks serious. I wonder what it can do?
 
 (link: &quot;boot up the computer to check out the BBS&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 
@@ -486,7 +486,7 @@ Christer &quot;McFunkypants&quot; Kaitila: (link: &quot;BBS hacker&quot;)[(goto-
 
 Ashleigh M.: (link: &quot;Library environment&quot;)[(goto-url: &#39;twine_frame.html?phrase=Back&amp;file=ashleigh_library~&#39;)]
 
-H Trayford: (link: &quot;Ozymandias area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Back&amp;file=HOne&#39;)]
+H Trayford: (link: &quot;Ozymandias area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Back&amp;file=HOne&#39;)], edited (link: &quot;Self-Calm key text&quot;)[(goto-url: &#39;http://self-calm.com&#39;)]
 
 Alan Zaring: (link: &quot;Snowglobe music&quot;)[(goto-url: &#39;unity_loader.html?phrase=Back&amp;file=TurnTableCar&#39;)]
 
