--- a/HP Labs Main Twine and JS Projects/twine_frame.html
+++ b/HP Labs Main Twine and JS Projects/twine_frame.html
@@ -3,8 +3,17 @@
 <head>
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC" rel="stylesheet">
 </head>
-<center><a href="index.html" target="_parent" id="phrase"></a><br/>
+<style>
+  #phrase {
+    font-family: 'Alegreya Sans SC', sans-serif;
+  }
+  html {
+    background-image: url('past.png');
+  }
+</style>
+<center>👉 <a href="index.html" target="_parent" id="phrase"></a> 👈<br/>
 <iframe id="frame" src="" width="1000" height="675"></iframe></center>
 <script>
 
